[package]
name = "cc-langid-sampler"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "53.0.0"
clap = { version = "4.5.16", features = ["derive"] }
datafusion = { version = "41.0.0", features = ["array_expressions"] }
rand = "0.8.5"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
walkdir = "2.5.0"
