[package]
name = "madlad-sampler"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "55.2.0"
clap = { version = "4.5.40", features = ["derive"] }
flate2 = "1.1.2"
isolang = "2.4.0"
parquet = "55.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
