[package]
name = "oscar2parquet"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "52.1.0"
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.30"
isolang = "2.4.0"
oxilangtag = "0.1.5"
parquet = "52.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
url = "2.5.2"
walkdir = "2.5.0"
